# my_raytracing

./: .gitignore  CMakeLists.txt  image.ppm  image1.ppm  run.sh
src/: aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  mc.cc  onb.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
